# opth_course_alert

./: README.md
alert-app/: .env  main.py  pyproject.toml
alert-app/alert_app/: course_availability.py  send_alert.py  site_mentions.py
